# result-school-blog

./: .gitignore  Cargo.toml  README.md  Trunk.toml  count_lines.ps1  db.json  index.html
bff/: Cargo.toml
bff/src/: api_utils.rs  db_utils.rs  json_sv_utils.rs  lib.rs  out_api_utils.rs  procedures.rs  server.rs  store.rs
bff/src/api_utils/: fetchers.rs  updaters.rs
bff/src/db_utils/: updaters.rs
bff/src/procedures/: types.rs  utils.rs
bff/src/server/: error.rs  fetchers.rs  geters.rs  procedures.rs  types.rs  utils.rs
bff/src/store/: creaters.rs  delete.rs  readers.rs  updaters.rs
bff/src/store_utils/: creaters.rs  delete.rs  readers.rs  updaters.rs
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
js-packs/json-server/: package.json  как запустить.txt
js-packs/tailwind/: input.css  output.css  tailwind.config.js
js-packs/tailwind/дополни в папке vs code/: инструкция.txt
json-server/: Новый текстовый документ.txt
src/: bff.rs  components.rs  entities.rs  main.rs  pages.rs  server.rs  store.rs  types.rs  utils.rs
src/bff/: db_utils.rs  mod.rs  server.rs  session.rs  sessions.rs
src/bff/server/: mod.rs  server.rs  types.rs
src/bff/shared/: constants.rs  mod.rs  types.rs
src/components/: access_denied.rs  button.rs  content.rs  footer.rs  h2.rs  header.rs  icon.rs  input.rs  mod.rs  modal.rs  page_err_msg.rs  page_guard.rs
src/components/app/: mod.rs
src/components/footer/: Footer.rs  mod.rs  weather.json  weather.rs
src/components/header/: control_panel.rs  header.rs  logo.rs  mod.rs
src/entities/: mod.rs  session.rs  user.rs
src/entities/user/: mod.rs  role.rs  user.rs
src/pages/: authorization.rs  components.rs  error_page.rs  mod.rs  post.rs  registration.rs  shared_components.rs  test.rs  users.rs  users_page.rs
src/pages/authentication/: authorization.rs  mod.rs  registration.rs
src/pages/components/: h2.rs  (+4 more)
src/routes/: question.rs
src/shared/: types.rs
src/types/: _auth.rs  auth.rs  authed_user.rs  glob_ctx.rs  modal_config.rs  modal_window.rs  others.rs  outer_api.rs  pagination.rs  question.rs  session.rs  user_info.rs
store/: creaters.rs
(+57 files in other folders)
