[package]
name = "resault_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1.34", features = ["full"]}
leptos = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
chrono = "0.4"                                          # footer: отображает текущую дату
bff = { path = "bff" }
serde_json = "1.0"                                      # footer: берет погоду в файле
