[package]
name = "resault_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bff = { path = "bff" }
chrono = "0.4"                                          # footer: отображает текущую дату
serde = "1.0"                                           # footer: берет погоду в файле
serde_json = "1.0"                                      # footer: берет погоду в файле
# tokio = { version = "1.34", features = ["full"]}
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
gloo-timers = { version = "0.3.0", features = [
    "futures",
] } # footer: имитирует задержку
